--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -7,11 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingTop="32dp"
-    android:paddingBottom="32dp"
-    android:paddingStart="32dp"
-    android:paddingEnd="32dp"
-    android:fitsSystemWindows="true"
+    android:padding="32dp"
     tools:context=".Password">
 
     <TextView
