--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,6 +48,7 @@
                             android:textStyle="bold" />
 
                         <androidx.appcompat.widget.SearchView
+                            android:id="@+id/search"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
