--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -234,11 +234,21 @@
                 android:layout_height="wrap_content" />
 
             <Button
-                android:id="@+id/add_read"
+                android:id="@+id/viewcomments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginTop="64dp"
+                android:background="@drawable/button"
+                android:text="View comments"
+                android:textSize="24dp" />
+
+            <Button
+                android:id="@+id/add_read"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/button"
                 android:text="Add to Read List!"
                 android:textSize="24dp" />
