--- a/app/src/main/res/layout/activity_rating_detail.xml
+++ b/app/src/main/res/layout/activity_rating_detail.xml
@@ -234,10 +234,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <Button
+                android:id="@+id/viewcomments"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="64dp"
+                android:background="@drawable/button"
+                android:text="View comments"
+                android:textSize="24dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="16dp"
                 android:orientation="horizontal"
                 android:weightSum="3">
 
